--- a/resume_site/views/cybersecurity.html
+++ b/resume_site/views/cybersecurity.html
@@ -112,6 +112,17 @@
                     secure USB usage and strengthens the hospital's security posture. The implementation of recommended risk mitigation measures and incident response protocols ensures a proactive 
                     approach to USB-related security incidents and safeguards sensitive patient information.
                   </p>
+                    <br>
+                <a href="../public/css/Cybersecurity/Incident Handler's Journal - Juan Cardenas.pdf" target="_blank" class="nice-button">Perform a Query with Splunk</a>
+                <p class="impg">
+                    The perform a query with splunk project focuses on using Splunk to analyze failed SSH logins for the root account on the mail server of Buttercup Games, an e-commerce store.
+                    As a security analyst, your objective is to identify any potential security issues or suspicious activities related to SSH login attempts. By leveraging Splunk's powerful search and analysis 
+                    capabilities, you can gain insights into failed login patterns, potential brute-force attacks, or unauthorized access attempts.
+                  </p>
+
+                  <p class="impg">
+                    The perform a query with Splunk project enables you to leverage Splunk's capabilities to identify potential security issues and ensure the integrity of the mail server at Buttercup Games. 
+                      By analyzing failed SSH logins for the root account, you gain insights into unauthorized access attempts, potential brute-force attacks, or suspicious activity.
                   <br>
                 </div>
                 </section>
