--- a/resume_site/views/tools.html
+++ b/resume_site/views/tools.html
@@ -159,6 +159,30 @@
                     experience in query analysis, optimization techniques, and performance tuning, which are essential in data-driven applications and database management scenarios.
                 </p>
                 <br>
+               <a href="../public/css/Tools/Perform a Query with Splunk - Juan Cardenas.pdf" target="_blank" class="nice-button">Perform a Query with Splunk</a>
+                  <p class="impg">
+                      The SQL Query Performance Project focuses on performing different SQL queries and optimizing their execution within a database management system. This project aims to enhance your skills in 
+                      constructing SQL queries, understanding query performance, and optimizing query execution to achieve efficient and fast results. By working with various types of SQL queries, you gain hands-on experience 
+                      in data retrieval, filtering, joining, aggregating, and other query operations.
+                  </p>
+                  
+                  <p class="impg">
+                      The SQL Query Performance Project enhances your skills in constructing and optimizing SQL queries, enabling you to retrieve data efficiently and effectively from a database. Through this project, you gain practical 
+                      experience in query analysis, optimization techniques, and performance tuning, which are essential in data-driven applications and database management scenarios.
+                  </p>
+                  <br>
+                  <a href="../public/css/Tools/Perform a Query with Chronicle - Juan Cardenas.pdf" target="_blank" class="nice-button">Perform a Query with Chronicle</a>
+                  <p class="impg">
+                    The perform a query with Chronicle project focuses on utilizing Chronicle, a security analytics platform, to investigate a suspicious domain name identified in a phishing email received by an employee at a 
+                    financial services company. As a security analyst, your goal is to determine if any other employees have received phishing emails containing the suspicious domain name (signin.office365x24.com) and whether they have visited 
+                    the domain. By leveraging Chronicle's capabilities, you can analyze network traffic, email logs, and other relevant data to identify potential phishing attempts and assess the impact on the organization's security.
+                  </p>
+                  
+                  <p class="impg">
+                    The perform a query with Chronicle project empowers you to leverage Chronicle's capabilities to identify and assess potential phishing attempts within a financial services company. By investigating
+                     the suspicious domain and related email activities, you gain insights into the effectiveness of the organization's security measures and can proactively enhance the security posture.
+                  </p>
+                  <br>
                 </div>
                 </section>
                 </body>
