--- a/resume_site/views/cybersecurity.html
+++ b/resume_site/views/cybersecurity.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
     <head>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
@@ -113,16 +113,28 @@
                     approach to USB-related security incidents and safeguards sensitive patient information.
                   </p>
                     <br>
-                <a href="../public/css/Cybersecurity/Incident Handler's Journal - Juan Cardenas.pdf" target="_blank" class="nice-button">Perform a Query with Splunk</a>
+                <br>
+                  <a href="../public/css/Cybersecurity/Incident Handler's Journal - Juan Cardenas.pdf" target="_blank" class="nice-button">Incident Handler's Journal</a>
                 <p class="impg">
-                    The perform a query with splunk project focuses on using Splunk to analyze failed SSH logins for the root account on the mail server of Buttercup Games, an e-commerce store.
-                    As a security analyst, your objective is to identify any potential security issues or suspicious activities related to SSH login attempts. By leveraging Splunk's powerful search and analysis 
-                    capabilities, you can gain insights into failed login patterns, potential brute-force attacks, or unauthorized access attempts.
+                  The Incident Handler's Journal project focuses on creating a comprehensive journal that documents incident response activities, observations, and lessons learned during various cybersecurity incidents. 
+                  As an incident handler, maintaining a detailed journal is essential for recording crucial information, tracking progress, and capturing key insights for future reference. This project aims to establish 
+                  a structured and organized incident journal to facilitate effective incident response and enhance knowledge sharing within the cybersecurity team.
                   </p>
 
                   <p class="impg">
-                    The perform a query with Splunk project enables you to leverage Splunk's capabilities to identify potential security issues and ensure the integrity of the mail server at Buttercup Games. 
-                      By analyzing failed SSH logins for the root account, you gain insights into unauthorized access attempts, potential brute-force attacks, or suspicious activity.
+                    The Incident Handler's Journal project promotes effective incident response and knowledge sharing within the cybersecurity team. By maintaining a comprehensive journal, incident handlers can improve 
+                    incident handling processes, foster collaboration, and enhance future incident response efforts.
+                  </p>
+                    <p class="impg">
+                    Through this project, you develop a disciplined approach to incident documentation, facilitating the capture of critical information, timelines, and actions taken during incident response. By reflecting on each incident,
+                     you gain insights into incident patterns, emerging threats, and potential vulnerabilities within the organization's security infrastructure. This project contributes to building a repository of incident knowledge, enabling 
+                     incident handlers to learn from past experiences and improve incident response capabilities.
+                    </p>
+
+                    <p class="impg">
+                     The Incident Handler's Journal serves as a valuable resource for incident debriefings, regulatory compliance, and internal or external audits. It facilitates knowledge transfer, ensures consistency in incident documentation, 
+                     and supports the continuous improvement of incident response processes.
+                  </p>
                   <br>
                 </div>
                 </section>
